[tool.poetry]
name = "pomodoro-timer"
version = "0.1.0"
description = ""
authors = ["Biaslan-git <django.ppp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.39"
alembic = "^1.15.1"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
